# uhum-avatar

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
crates/ua-agent/: Cargo.toml
crates/ua-agent/src/: agent_card.rs  cache.rs  dossier.rs  lib.rs  queue.rs  session.rs
crates/ua-core/: Cargo.toml
crates/ua-core/src/: error.rs  lib.rs  traits.rs
crates/ua-view/: Cargo.toml
crates/ua-view/src/: lib.rs  reactive.rs  routing.rs  runtime.rs
crates/ua-wasm/: Cargo.toml
crates/ua-wasm/src/: executor.rs  lib.rs  scheduler.rs  transport.rs
specs/: BROWSER-DEPLOYMENT.md  PLATFORMS.md  SMART-ROUTING.md  UHUM-VIEW.md  VIEW-INSTRUCTIONS.md
