[package]
name = "ua-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent communication layer for Uhum Avatar (session, sync, queue, agent_card)"

[dependencies]
# Internal crates
ua-core = { workspace = true }

# Shared Uhum Brain crates
ub-core = { workspace = true }
ub-protocol = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
parking_lot = { workspace = true }
tracing = { workspace = true }
