[package]
name = "ua-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Uhum Avatar (browser platform)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal crates
ua-core = { workspace = true }
ua-agent = { workspace = true }
ua-view = { workspace = true }

# Shared Uhum Brain crates
ub-core = { workspace = true }
ub-protocol = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Clipboard",
    "Navigator",
] }

# Async
futures = { workspace = true }

# Utilities
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
